--- a/index.html
+++ b/index.html
@@ -3,21 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="vybekid1 :developer">
     <title>Vybekid1</title>
+    <link rel="shortcut icon" href="downloa.png"
 </head>
 <body>
-    <a href="index.html">Vybekid1</a>
-    <a href="contact.html">contact</a>
-    <a href="blog.html">Blog</a>
-    <a href="projects.html">Projects</a><br>
+    <a href="index.html">Vybekid1</a>&nbsp;
+    <a href="contact.html">Contact</a>&nbsp;
+    <a href="blog.html">Blog</a>&nbsp;
+    <a href="projects.html">Projects</a><br>&nbsp;
  <p><img src="WhatsApp Image 2020-07-27 at 12.26.30 (1).jpeg"
  alt="Vybekid1"
  width="250"
- height="250"</p>
+ height="250">
     <h1>Hello this is Vybekid1...</h1>
     
     <p>get to know me well by clicking my <em><strong>social links</strong></em></p>
-    <hr/>
-    
+    <ul>
+        <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
+        <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
+        <li><a href="https://github.com/vybekid1" target="_blank">github</li>
+        <li><a href="https://facebook.com/vybekid1"target="_blank">Facebook</a></li> 
+    </ul>
+    <pre>
+        “I'm selfish, impatient and a little insecure. I make mistakes, I am out of control and at times hard to handle. But if you can't handle me at my worst, then you sure as hell don't deserve me at my best.”
+― Marilyn Monroe
+    </pre>
+    <p>he said
+        <blockquote>
+            youll never walk alone
+        </blockquote>
+        <q>youll never walk alone</q>
+    </p>
+    <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
 </body>
 </html>
