--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="manifest" href="/site.webmanifest">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
-    <title>Vybekid1</title>
+    <title>Home</title>
 </head>
 <body>
     <header class="header-outer">
