--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Vybekid1</a>&nbsp;
+        <a href="index.html">Home</a>&nbsp;
         <a href="contacts.html">Contacts</a>&nbsp;
         <a href="blog.html">Blog</a>&nbsp;
         <a href="about.html">About</a>&nbsp;
