--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <link rel="manifest" href="/site.webmanifest">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
-    <title>Home</title>
+    <title>Vybekid1</title>
 </head>
 <body>
     <header class="header-outer">
         <div class="header-inner responsive-wrapper">
           <div class="header-logo">
     <nav>
-      <a href="index.html">Vybekid1</a>&nbsp;
+      <a href="index.html">Home</a>&nbsp;
       <a href="contacts.html">Contacts</a>&nbsp;
       <a href="blog.html">Blog</a>&nbsp;
       <a href="about.html">About</a>&nbsp;
