--- a/contacts.html
+++ b/contacts.html
@@ -16,6 +16,50 @@
         <a href="services.html">Services</a><br>
       </nav>
       <hr>
+      <main>
+          <form>
+               <p>
+              <label for="name">Name:</label>
+              <input type="text" name="name" id="name" size="30" placeholder="Your Name"/>
+          </p>
+          <p>
+              <label for="email">Email</label>
+              <input type="email" name="email" id="email" size="30" placeholder="name@example.com"/>
+          </p>  
+          <p>
+              <label for="tel">Tel</label>
+              <input type="tel" name="tel" id="tel" size="30" placeholder="07xxxxxxxx">
+          </p>
+          <p>
+              <label for="mobile">Preferred Means</label>
+              <input type="radio" name="contact" id="mobile">Tel
+              <input type="radio" name="contact" id="mail">Email
+          </p> 
+          <p>
+              <label for="product">Product</label>
+              <select name="product" id="product">
+                  <option value="Web">Web Application</option>
+                  <option value="Mobile">Mobile Application</option>
+                  <option value="desktop">Desktop Application</option>
+                  <option value="other">Other</option>
+              </select>
+          </p>
+          <p>
+              <label for="message">Message</label><br>
+              <textarea name="message" id="message" cols="30" rows="10">
+              </textarea>
+          </p>
+          <p>
+          <input type="checkbox" name="offers" id="offers"/>
+          <label for="offers">Subscribe to news and offers</label>
+        </p>
+        <p>
+            <input type="reset" value="cancel">
+            <input type="submit" value="send message">
+        </p>
+         </form>
+         
+      </main>
     <footer>
         <p><strong>social links</strong></p>
         <ul>
