--- a/contacts.html
+++ b/contacts.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacts</title>
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
     <nav>
@@ -16,14 +17,14 @@
         <a href="services.html">Services</a><br>
       </nav>
       <hr>
-      <main>
+      <header>
           <form>
                <p>
               <label for="name">Name:</label>
               <input type="text" name="name" id="name" size="30" placeholder="Your Name"/>
           </p>
           <p>
-              <label for="email">Email</label>
+              <label for="email">Email:&nbsp;</label>
               <input type="email" name="email" id="email" size="30" placeholder="name@example.com"/>
           </p>  
           <p>
@@ -59,7 +60,7 @@
         </p>
          </form>
          
-      </main>
+        </header>
     <footer>
         <p><strong>social links</strong></p>
         <ul>
