--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
+<link rel="stylesheet" href="/styles/main.css">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
-    <title>Vybekid1</title>
+    <title>Home</title>
 </head>
 <body>
-    <header class="header-outer">
-        <div class="header-inner responsive-wrapper">
-          <div class="header-logo">
     <nav>
       <a href="index.html">Home</a>&nbsp;
       <a href="contacts.html">Contacts</a>&nbsp;
@@ -27,7 +25,7 @@
 </div>
 </header>
     <hr>
-    <main>
+    <header>
 
         <p><img src="WhatsApp Image 2020-07-27 at 12.26.30 (1).jpeg"
             alt="Vybekid1"
@@ -44,7 +42,7 @@
         </blockquote>
         <q>youll never walk alone</q>
     </p>  
-</main>
+</header>
     <footer>
          <p><strong>social links</strong></p>
          <ul>
