--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
     <nav>
@@ -16,6 +17,11 @@
         <a href="services.html">Services</a><br>
       </nav>
       <hr>
+      <header>
+          <main>
+              
+          </main>
+      </header>
     <footer>
         <p><strong>social links</strong></p>
         <ul>
