--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
     <nav>
@@ -16,7 +17,8 @@
         <a href="services.html">Services</a><br>
       </nav>
       <hr>
-      <main>
+      
+      <header>
           <table border="1">
               <thead>
                   <tr>
@@ -37,7 +39,7 @@
                           <th>noSQL</th>
                         </tr>
                     </table>
-                </main>
+                </header>
             </tbody>
                 <footer>
         <p><strong>social links</strong></p>
