--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             width="250"
             height="250">
     <h1>Hello this is Vybekid1...</h1>
-    <pre>
+    <blockquote>
         “I'm selfish, impatient and a little insecure. I make mistakes, I am out of control and at times hard to handle. But if you can't handle me at my worst, then you sure as hell don't deserve me at my best.”
 ― Marilyn Monroe
-    </pre>
+    </blockquote>
     <p>he said
         <blockquote>
             youll never walk alone
