--- a/about.html
+++ b/about.html
@@ -16,7 +16,6 @@
         <a href="projects.html">Projects</a>&nbsp;
         <a href="services.html">Services</a><br>
       </nav>
-      <hr>
       
       <header>
           <table border="1">
@@ -42,14 +41,12 @@
                 </header>
             </tbody>
                 <footer>
-        <p><strong>social links</strong></p>
-        <ul>
-            <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
-            <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
-            <li><a href="https://github.com/vybekid1" target="_blank">github</li>
-            <li><a href="https://facebook.com/vybekid1"target="_blank">Facebook</a></li> 
-       </ul>
-       
+                    <ul>
+                        <a href="https://instagram.com/vybekid1" target="blank">Instagram</a>
+                        <a href="https://twitter.com/vybekid1" target="blank">Twitter</a>
+                        <a href="https://github.com/vybekid1" target="_blank">Github</a>
+                        <a href="https://facebook.com/vybekid1"target="_blank">Facebook</a>
+                   </ul>
        <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
    </footer>
 </body>
