--- a/index.html
+++ b/index.html
@@ -44,14 +44,12 @@
     </p>  
 </header>
     <footer>
-         <p><strong>social links</strong></p>
-         <ul>
-             <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
-             <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
-        <li><a href="https://github.com/vybekid1" target="_blank">github</li>
-            <li><a href="https://facebook.com/vybekid1"target="_blank">Facebook</a></li> 
-        </ul>
-        
+        <ul>
+            <a href="https://instagram.com/vybekid1" target="blank">Instagram</a>
+            <a href="https://twitter.com/vybekid1" target="blank">Twitter</a>
+            <a href="https://github.com/vybekid1" target="_blank">Github</a>
+            <a href="https://facebook.com/vybekid1"target="_blank">Facebook</a>
+       </ul>
         <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
     </footer>
 </body>
