--- a/projects.html
+++ b/projects.html
@@ -16,16 +16,13 @@
         <a href="projects.html">Projects</a>&nbsp;
         <a href="services.html">Services</a><br>
       </nav>
-      <hr>
     <footer>
-        <p><strong>social links</strong></p>
         <ul>
-            <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
-            <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
-       <li><a href="https://github.com/vybekid1" target="_blank">github</li>
-           <li><a href="https://facebook.com/vybekid1"target="_blank">Facebook</a></li> 
+            <a href="https://instagram.com/vybekid1" target="blank">Instagram</a>
+            <a href="https://twitter.com/vybekid1" target="blank">Twitter</a>
+            <a href="https://github.com/vybekid1" target="_blank">Github</a>
+            <a href="https://facebook.com/vybekid1"target="_blank">Facebook</a>
        </ul>
-       
        <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
    </footer>
 </body>
