--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
     <nav>
@@ -16,36 +16,36 @@
         <a href="projects.html">Projects</a>&nbsp;
         <a href="services.html">Services</a><br>
       </nav>
-      
-      <header>
+      <main>
+
           <table border="1">
               <thead>
                   <tr>
                       <th>Language</th>
                       <th>Frameworks</th>
                       <th>Databases</th>
-                  </tr>
+                    </tr>
                 </thead>
                 <tbody>
-                      <th>HTML5</th>
-                      <th>Jquery</th>
-                      <th>MySQL</th>
-                  </tr>
-
-                      <tr>
-                          <th>CSS5</th>
-                          <th>ExpressJS</th>
-                          <th>noSQL</th>
-                        </tr>
-                    </table>
-                </header>
-            </tbody>
-                <footer>
+                    <th>HTML5</th>
+                    <th>Jquery</th>
+                    <th>MySQL</th>
+                </tr>
+                
+                <tr>
+                    <th>CSS5</th>
+                    <th>ExpressJS</th>
+                    <th>noSQL</th>
+                </tr>
+            </table>
+        </tbody>
+    </main>
+        <footer>
                     <ul>
-                        <a href="https://instagram.com/vybekid1" target="blank">Instagram</a>
-                        <a href="https://twitter.com/vybekid1" target="blank">Twitter</a>
-                        <a href="https://github.com/vybekid1" target="_blank">Github</a>
-                        <a href="https://facebook.com/vybekid1"target="_blank">Facebook</a>
+                        <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
+                        <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
+                        <li><a href="https://github.com/vybekid1" target="_blank">Github</a></li>
+                        <li><a href="https://facebook.com/vybekid1"target="_blank">Facebook</a></li>
                    </ul>
        <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
    </footer>
