--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
 </head>
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="/styles/main.css">
 <body>
     <nav>
         <a href="index.html">Home</a>&nbsp;
@@ -16,12 +16,14 @@
         <a href="projects.html">Projects</a>&nbsp;
         <a href="services.html">Services</a><br>
       </nav>
+      <main>
+      </main>
     <footer>
         <ul>
-            <a href="https://instagram.com/vybekid1" target="blank">Instagram</a>
-            <a href="https://twitter.com/vybekid1" target="blank">Twitter</a>
-            <a href="https://github.com/vybekid1" target="_blank">Github</a>
-            <a href="https://facebook.com/vybekid1"target="_blank">Facebook</a>
+            <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
+            <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
+            <li><a href="https://github.com/vybekid1" target="_blank">Github</a></li>
+            <li><a href="https://facebook.com/vybekid1"target="_blank">Facebook</a></li>
        </ul>
        <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
    </footer>
