--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
-<link rel="stylesheet" href="main.css">
+<link rel="stylesheet" href="/styles/main.css">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
     <title>Home</title>
@@ -24,10 +24,8 @@
     </nav>
 </div>
 </header>
-    <hr>
-    <header>
-
-        <p><img src="WhatsApp Image 2020-07-27 at 12.26.30 (1).jpeg"
+    <main>
+        <p><img src="/images/WhatsApp Image 2020-07-27 at 12.26.30 (1).jpeg"
             alt="Vybekid1"
             width="250"
             height="250">
@@ -40,15 +38,15 @@
         <blockquote>
             youll never walk alone
         </blockquote>
-        <q>youll never walk alone</q>
+        <q>you'll never walk alone</q>
     </p>  
-</header>
+</main>
     <footer>
         <ul>
-            <a href="https://instagram.com/vybekid1" target="blank">Instagram</a>
-            <a href="https://twitter.com/vybekid1" target="blank">Twitter</a>
-            <a href="https://github.com/vybekid1" target="_blank">Github</a>
-            <a href="https://facebook.com/vybekid1"target="_blank">Facebook</a>
+            <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
+            <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
+            <li><a href="https://github.com/vybekid1" target="_blank">Github</a></li>
+            <li><a href="https://facebook.com/vybekid1"target="_blank">Facebook</a></li>
        </ul>
         <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
     </footer>
