--- a/contacts.html
+++ b/contacts.html
@@ -9,12 +9,15 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>&nbsp;
-        <a href="contacts.html">Contacts</a>&nbsp;
-        <a href="blog.html">Blog</a>&nbsp;
-        <a href="about.html">About</a>&nbsp;
-        <a href="projects.html">Projects</a>&nbsp;
-        <a href="services.html">Services</a><br>
+        <a href="index.html">Home</a>
+  
+        <div class="navbar" >
+            <a href="contacts.html">Contacts</a>&nbsp;
+            <a href="blog.html">Blog</a>&nbsp;
+            <a href="about.html">About</a>&nbsp;
+            <a href="projects.html">Projects</a>&nbsp;
+            <a href="services.html">Services</a><br>
+          </div>
       </nav>
       <main>
           <form>
