--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Projects</title>
+    <link rel="stylesheet" href="main.css">
 </head>
-<link rel="stylesheet" href="main.css">
 <body>
     <nav>
         <a href="index.html">Home</a>
@@ -20,6 +20,7 @@
           </div>
       </nav>
       <main>
+
       </main>
     <footer>
         <ul>
