--- a/services.html
+++ b/services.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Services</title>
+    <link rel="stylesheet" href="main.css">
 </head>
-<link rel="stylesheet" href="main.css">
 <body>
     <nav>
         <a href="index.html">Home</a>
@@ -19,8 +19,11 @@
             <a href="services.html">Services</a><br>
           </div>
       </nav>
-      <main>
-      </main>
+      <header>
+          <main>
+              
+          </main>
+      </header>
     <footer>
         <ul>
             <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
