--- a/index.html
+++ b/index.html
@@ -25,24 +25,18 @@
           <a href="services.html">Services</a><br>
         </div>
     </nav>
-</header>
     <main>
         <div class="column">
-<img src="WhatsApp Image 2020-07-27 at 12.26.30 (1).jpeg"
-            alt="Vybekid1"
-            width="200"
-            height="200">
+<img src="profile.jpeg" alt="Vybekid1">
         </div>
         
     <h1>Hello this is Vybekid1...</h1>
     <blockquote>
-        “I'm selfish, impatient and a little insecure. I make mistakes, I am out of control and at times hard to handle. But if you can't handle me at my worst, then you sure as hell don't deserve me at my best.”
+        “I'm selfish, impatient and a little insecure. I make mistakes, I am out of control and at times hard to handle. 
+        But if you can't handle me at my worst, then you sure as hell don't deserve me at my best.”
 ― Marilyn Monroe
     </blockquote>
-    <p>he said
-        <blockquote>
-            youll never walk alone
-        </blockquote>
+    <p>he said:
         <q>you'll never walk alone</q>
     </p>  
 </main>
@@ -51,7 +45,7 @@
             <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
             <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
             <li><a href="https://github.com/vybekid1" target="_blank">Github</a></li>
-            <li><a href="https://facebook.com/vybekid1"target="_blank">Facebook</a></li>
+            <li><a href="https://facebook.com/vybekid1" target="_blank">Facebook</a></li>
        </ul>
         <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
     </footer>
