--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     <main>
         <div class="column">
-<img src="profile.jpeg" alt="Vybekid1">
+<img src="profile.jpeg" height="180px" alt="Vybekid1">
         </div>
         
     <h1>Hello this is Vybekid1...</h1>
