--- a/blog.html
+++ b/blog.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Blog</title>
 </head>
-<link rel="stylesheet" href="main.css">
 <body>
     <nav>
         <a href="index.html">Home</a>
@@ -20,13 +20,21 @@
           </div>
       </nav>
       <main>
+          <div class="blog">
+              <div id="left">
+                  <span>GET ALL NEWS HERE</span>
+              </div>
+              <div id="center">
+              </div>
+              <div id="right"></div>
+            </div>
       </main>
     <footer>
         <ul>
             <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
             <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
             <li><a href="https://github.com/vybekid1" target="_blank">Github</a></li>
-            <li><a href="https://facebook.com/vybekid1"target="_blank">Facebook</a></li>
+            <li><a href="https://facebook.com/vybekid1" target="_blank">Facebook</a></li>
        </ul>
        <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
    </footer>
