--- a/about.html
+++ b/about.html
@@ -8,10 +8,10 @@
     <title>About</title>
 </head>
 <body>
-    <nav>
+    <header>
+        <nav class="navbar">
         <a href="index.html">Home</a>
-  
-        <div class="navbar" >
+        <div class="navbar-collapse" >
             <a href="contacts.html">Contacts</a>&nbsp;
             <a href="blog.html">Blog</a>&nbsp;
             <a href="about.html">About</a>&nbsp;
@@ -19,6 +19,7 @@
             <a href="services.html">Services</a><br>
           </div>
       </nav>
+    </header>
       <main>
           <table border="1">
               <thead>
