--- a/blog.html
+++ b/blog.html
@@ -8,10 +8,10 @@
     <title>Blog</title>
 </head>
 <body>
-    <nav>
+    <header>
+        <nav class="navbar">
         <a href="index.html">Home</a>
-  
-        <div class="navbar" >
+        <div class="navbar-collapse" >
             <a href="contacts.html">Contacts</a>&nbsp;
             <a href="blog.html">Blog</a>&nbsp;
             <a href="about.html">About</a>&nbsp;
@@ -19,15 +19,8 @@
             <a href="services.html">Services</a><br>
           </div>
       </nav>
+    </header>
       <main>
-          <div class="blog">
-              <div id="left">
-                  <span>GET ALL NEWS HERE</span>
-              </div>
-              <div id="center">
-              </div>
-              <div id="right"></div>
-            </div>
       </main>
     <footer>
         <ul>
