--- a/index.html
+++ b/index.html
@@ -14,32 +14,36 @@
     <title>Home</title>
 </head>
 <body>
-    <nav>
-      <a href="index.html">Home</a>
-
-      <div class="navbar" >
-          <a href="contacts.html">Contacts</a>&nbsp;
-          <a href="blog.html">Blog</a>&nbsp;
-          <a href="about.html">About</a>&nbsp;
-          <a href="projects.html">Projects</a>&nbsp;
-          <a href="services.html">Services</a><br>
-        </div>
-    </nav>
-    <main>
-        <div class="column">
-<img src="profile.jpeg" height="180" alt="Vybekid1">
-        </div>
+    <header>
+        <nav class="navbar">
+        <a href="index.html">Home</a>
         
+        <div class="navbar-collapse" >
+            <a href="contacts.html">Contacts</a>&nbsp;
+            <a href="blog.html">Blog</a>&nbsp;
+            <a href="about.html">About</a>&nbsp;
+            <a href="projects.html">Projects</a>&nbsp;
+            <a href="services.html">Services</a><br>
+          </div>
+      </nav>
+    </header>
+      <section class="hero">
+        <main>
+            <div class="column">
+                <img src="profile.jpeg" height="180" alt="Vybekid1">
+            </div>
+            
     <h1>Hello this is Vybekid1...</h1>
     <blockquote>
         “I'm selfish, impatient and a little insecure. I make mistakes, I am out of control and at times hard to handle. 
         But if you can't handle me at my worst, then you sure as hell don't deserve me at my best.”
-― Marilyn Monroe
+        ― Marilyn Monroe
     </blockquote>
     <p>he said:
         <q>you'll never walk alone</q>
     </p>  
 </main>
+</section>
     <footer>
         <ul>
             <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
