--- a/blog.html
+++ b/blog.html
@@ -8,28 +8,42 @@
     <title>Blog</title>
 </head>
 <body>
+  <section>
+    <div class="circle"></div>
+    <div class="circle1"></div>
+    <div class="circle2"></div>
+    <div class="circle3"></div>
     <header>
-        <nav class="navbar">
-        <a href="index.html">Home</a>
-        <div class="navbar-collapse" >
-            <a href="contacts.html">Contacts</a>&nbsp;
-            <a href="blog.html">Blog</a>&nbsp;
-            <a href="about.html">About</a>&nbsp;
-            <a href="projects.html">Projects</a>&nbsp;
-            <a href="services.html">Services</a><br>
-          </div>
-      </nav>
-    </header>
-      <main>
+        <a class="logo" href="index.html" >VybeKID</a>
+ <div class="menu"></div>
+    <div class="navbar">
+       <div class="navbar-collapse" >
+           <a href="index.html">Go Home</a>
+           <a href="contacts.html">Contact us</a>
+           <a href="about.html">About</a>
+           <a href="projects.html">Projects</a>
+           <a href="services.html">Services</a>
+        </div>
+    </div>
+</header>
+<main>
+  <div class="spotify">
+          <h2>Spotify Playlist</h2>
+          <p>On Repeat</p>
+          <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1EprEqNERKo5LB" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          <h4>By:<span>Spotify</span> For Everyone</h4>
+        </div>
       </main>
-    <footer>
+    </section>
+      <footer>
         <ul>
-            <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
+          <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
             <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
             <li><a href="https://github.com/vybekid1" target="_blank">Github</a></li>
             <li><a href="https://facebook.com/vybekid1" target="_blank">Facebook</a></li>
-       </ul>
-       <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
-   </footer>
+          </ul>
+          <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
+        </footer>
+   <script src="app.js"></script>
 </body>
 </html>
