--- a/services.html
+++ b/services.html
@@ -8,20 +8,25 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-        <a href="index.html">Home</a>
-        <div class="navbar-collapse" >
-            <a href="contacts.html">Contacts</a>&nbsp;
-            <a href="blog.html">Blog</a>&nbsp;
-            <a href="about.html">About</a>&nbsp;
-            <a href="projects.html">Projects</a>&nbsp;
-            <a href="services.html">Services</a><br>
-          </div>
-      </nav>
+    <section>
+        <div class="circle"></div>
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+        <div class="circle3"></div>
+        <header>
+            <a class="logo" href="index.html" >VybeKID</a>
+     <div class="menu"></div>
+        <div class="navbar">
+           <div class="navbar-collapse" >
+               <a href="index.html">Go Home</a>
+               <a href="contacts.html">Contact us</a>
+               <a href="blog.html">Blog</a>
+               <a href="about.html">About</a>
+               <a href="projects.html">Projects</a>
+            </div>
+        </div>
     </header>
-          <main>
-          </main>
+</section>
     <footer>
         <ul>
             <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
@@ -31,5 +36,6 @@
        </ul>
        <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
    </footer>
+   <script src="app.js"></script>
 </body>
 </html>
