--- a/about.html
+++ b/about.html
@@ -8,24 +8,30 @@
     <title>About</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-        <a href="index.html">Home</a>
-        <div class="navbar-collapse" >
-            <a href="contacts.html">Contacts</a>&nbsp;
-            <a href="blog.html">Blog</a>&nbsp;
-            <a href="about.html">About</a>&nbsp;
-            <a href="projects.html">Projects</a>&nbsp;
-            <a href="services.html">Services</a><br>
-          </div>
-      </nav>
+    <section>
+        <div class="circle"></div>
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+        <div class="circle3"></div>
+        <header>
+            <a class="logo" href="index.html" >VybeKID</a>
+     <div class="menu"></div>
+        <div class="navbar">
+           <div class="navbar-collapse" >
+               <a href="index.html">Go Home</a>
+               <a href="contacts.html">Contact us</a>
+               <a href="blog.html">Blog</a>
+               <a href="projects.html">Projects</a>
+               <a href="services.html">Services</a>
+            </div>
+        </div>
     </header>
-      <main>
-          <table border="1">
-              <thead>
-                  <tr>
-                      <th>Language</th>
-                      <th>Frameworks</th>
+    <main>
+        <table border="1">
+            <thead>
+                <tr>
+                    <th>Language</th>
+                    <th>Frameworks</th>
                       <th>Databases</th>
                     </tr>
                 </thead>
@@ -43,8 +49,9 @@
             </tbody>
         </table>
     </main>
-        <footer>
-                    <ul>
+</section>
+    <footer>
+        <ul>
                         <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
                         <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
                         <li><a href="https://github.com/vybekid1" target="_blank">Github</a></li>
@@ -52,5 +59,6 @@
                    </ul>
        <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
    </footer>
+   <script src="app.js"></script>
 </body>
 </html>
