--- a/index.html
+++ b/index.html
@@ -8,50 +8,54 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css" 
+integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2bni" crossorigin="anonymous">
 <link rel="stylesheet" href="main.css">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
     <title>Home</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-        <a href="index.html">Home</a>
-        
-        <div class="navbar-collapse" >
-            <a href="contacts.html">Contacts</a>&nbsp;
-            <a href="blog.html">Blog</a>&nbsp;
-            <a href="about.html">About</a>&nbsp;
-            <a href="projects.html">Projects</a>&nbsp;
-            <a href="services.html">Services</a><br>
-          </div>
-      </nav>
-    </header>
-      <section class="hero">
-        <main>
-            <div class="column">
-                <img src="profile.jpeg" height="180" alt="Vybekid1">
+    <section>
+        <div class="circle"></div>
+        <div class="circle1"></div>
+        <div class="circle2"></div>
+        <div class="circle3"></div>
+        <header>
+            <a class="logo" href="index.html" >VybeKID</a>
+     <div class="menu"></div>
+        <div class="navbar">
+           <div class="navbar-collapse" >
+               <a href="contacts.html">Contact us</a>
+               <a href="blog.html">Blog</a>
+               <a href="about.html">About</a>
+               <a href="projects.html"></i>Projects</a>
+               <a href="services.html">Services</a><br>
             </div>
-            
-    <h1>Hello this is Vybekid1...</h1>
-    <blockquote>
-        “I'm selfish, impatient and a little insecure. I make mistakes, I am out of control and at times hard to handle. 
-        But if you can't handle me at my worst, then you sure as hell don't deserve me at my best.”
-        ― Marilyn Monroe
-    </blockquote>
-    <p>he said:
-        <q>you'll never walk alone</q>
-    </p>  
-</main>
+        </div>
+    </header>
+              <div class="content">
+                  <div class="text">
+                      <h1>Hello this is Vybekid1...</h1>
+                      <p>
+                          “I'm selfish, impatient and a little insecure. I make mistakes, I am out of control and at times hard to handle. 
+                          But if you can't handle me at my worst, then you sure as hell don't deserve me at my best.”
+                          ― Marilyn Monroe
+                          <img src="profile.jpeg">
+                        </p>
+                        <p>he said:
+                            <q>you'll never walk alone</q>
+                        </p>  
+                    </div>
 </section>
+
     <footer>
-        <ul>
-            <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
-            <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
-            <li><a href="https://github.com/vybekid1" target="_blank">Github</a></li>
-            <li><a href="https://facebook.com/vybekid1" target="_blank">Facebook</a></li>
+        <ul class="social">
+            <a href="https://instagram.com/vybekid1" target="blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com/vybekid1" target="blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/vybekid1" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://facebook.com/vybekid1" target="_blank"><i class="fab fa-facebook"></i></a>
        </ul>
         <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
     </footer>
+    <script src="app.js"></script>
 </body>
 </html>
