--- a/projects.html
+++ b/projects.html
@@ -8,22 +8,53 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+  <section>
+    <div class="circle"></div>
+    <div class="circle1"></div>
+    <div class="circle2"></div>
+    <div class="circle3"></div>
     <header>
-        <nav class="navbar">
-        <a href="index.html">Home</a>
-        <div class="navbar-collapse" >
-            <a href="contacts.html">Contacts</a>&nbsp;
-            <a href="blog.html">Blog</a>&nbsp;
-            <a href="about.html">About</a>&nbsp;
-            <a href="projects.html">Projects</a>&nbsp;
-            <a href="services.html">Services</a><br>
+        <a class="logo" href="index.html" >VybeKID</a>
+ <div class="menu"></div>
+    <div class="navbar">
+       <div class="navbar-collapse" >
+           <a href="index.html">Go Home</a>
+           <a href="contacts.html">Contact us</a>
+           <a href="blog.html">Blog</a>
+           <a href="about.html">About</a>
+           <a href="services.html">Services</a>
+        </div>
+    </div>
+</header>
+<main>
+  <h2>Some of my Projects include these</h2>
+  <div class="projects">
+    <div class="hotel">
+            <h4>Refurbed-Hotel</h4>
+            <img src="hotel.png" alt="">
+          <p>This is a site that  has a recipe designed for people who like Meringue Pie<br>
+            Click the link below to Access it</p>
+            <a href="https://vybekid1.github.io/hotel/" target="_blank">Hotel</a>
+        </div>
+        <div class="shopping">
+          <h4>SHOPPING WEBSITE</h4>
+          <img src="shopping.png" alt="">
+          <p>This is a  display of an online shopping website<br>
+            Click the link below to Access it</p>
+            <a href="https://vybekid1.github.io/shop/" target="_blank">Shop</a>
           </div>
-      </nav>
-    </header>
-      <main>
-
-      </main>
-    <footer>
+          <div class="profile">
+            <h4>PERSONAL SITE</h4>
+            <img src="myprof.png" alt="">
+            <p>This is a  site  that contains  my personal details  and profile<br>
+              Click the link below to Access it</p>
+              <a href="#" target="_blank">My Profile</a>
+              <h5>THIS IS A WORK IN PROGRESS</h5>
+            </div>
+          </div>
+        </main>
+      </section>
+        <footer>
         <ul>
             <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
             <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
@@ -32,5 +63,6 @@
        </ul>
        <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
    </footer>
+   <script src="app.js"></script>
 </body>
 </html>
