--- a/projects.html
+++ b/projects.html
@@ -31,21 +31,21 @@
   <div class="projects">
     <div class="hotel">
             <h4>Refurbed-Hotel</h4>
-            <img src="hotel.png" alt="">
+            <img src="hotel.png" alt="Hotel">
           <p>This is a site that  has a recipe designed for people who like Meringue Pie<br>
             Click the link below to Access it</p>
             <a href="https://vybekid1.github.io/hotel/" target="_blank">Hotel</a>
         </div>
         <div class="shopping">
           <h4>SHOPPING WEBSITE</h4>
-          <img src="shopping.png" alt="">
+          <img src="shopping.png" alt="Shop">
           <p>This is a  display of an online shopping website<br>
             Click the link below to Access it</p>
             <a href="https://vybekid1.github.io/shop/" target="_blank">Shop</a>
           </div>
           <div class="profile">
             <h4>PERSONAL SITE</h4>
-            <img src="myprof.png" alt="">
+            <img src="myprof.png" alt="Profile">
             <p>This is a  site  that contains  my personal details  and profile<br>
               Click the link below to Access it</p>
               <a href="#" target="_blank">My Profile</a>
@@ -54,15 +54,15 @@
           </div>
         </main>
       </section>
-        <footer>
-        <ul>
-            <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
-            <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
-            <li><a href="https://github.com/vybekid1" target="_blank">Github</a></li>
-            <li><a href="https://facebook.com/vybekid1" target="_blank">Facebook</a></li>
+      <footer>
+        <ul class="social">
+            <a href="https://instagram.com/vybekid1" target="blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://twitter.com/vybekid1" target="blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/vybekid1" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://facebook.com/vybekid1" target="_blank"><i class="fab fa-facebook"></i></a>
        </ul>
-       <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
-   </footer>
-   <script src="app.js"></script>
+        <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
+    </footer>
+    <script src="app.js"></script>
 </body>
 </html>
