--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
     <div class="circle2"></div>
     <div class="circle3"></div>
     <header>
-        <a class="logo" href="index.html" >VybeKID</a>
+      <a class="logo" href="#" ><img src="logo.png" alt=""></a>
  <div class="menu"></div>
     <div class="navbar">
        <div class="navbar-collapse" >
@@ -35,15 +35,15 @@
         </div>
       </main>
     </section>
-      <footer>
-        <ul>
-          <li><a href="https://instagram.com/vybekid1" target="blank">Instagram</a></li>
-            <li><a href="https://twitter.com/vybekid1" target="blank">Twitter</a></li>
-            <li><a href="https://github.com/vybekid1" target="_blank">Github</a></li>
-            <li><a href="https://facebook.com/vybekid1" target="_blank">Facebook</a></li>
-          </ul>
-          <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
-        </footer>
-   <script src="app.js"></script>
-</body>
+    <footer>
+      <ul class="social">
+          <a href="https://instagram.com/vybekid1" target="blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://twitter.com/vybekid1" target="blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://github.com/vybekid1" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://facebook.com/vybekid1" target="_blank"><i class="fab fa-facebook"></i></a>
+     </ul>
+      <p> &copy;2021 All Rights Reserved. vybekid1&trade;</p>
+  </footer>
+  <script src="app.js"></script>
+  
 </html>
