--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ integrity="sha384-wESLQ85D6gbsF459vf1CiZ2+rr+CsxRY0RpiF1tLlQpDnAgg6rwdsUF1+Ics2b
         <div class="circle2"></div>
         <div class="circle3"></div>
         <header>
-            <a class="logo" href="index.html" >VybeKID</a>
+            <a class="logo" href="#" ><img src="logo.png" alt=""></a>
      <div class="menu"></div>
         <div class="navbar">
            <div class="navbar-collapse" >
