--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
         <div class="circle2"></div>
         <div class="circle3"></div>
         <header>
-            <a class="logo" href="index.html" >VybeKID</a>
+        <a class="logo" href="#" ><img src="logo.png" alt=""></a>
      <div class="menu"></div>
         <div class="navbar">
            <div class="navbar-collapse" >
